force-app/main/default/objects/Cancellation_Refund__c/Cancellation_Refund__c.object-meta.xml
<CustomObject>
    <label>Cancellation/Refund (Old)</label>
    <nameField>
        <displayFormat>CanRef-{00000}</displayFormat>
        <label>Cancelation/Refund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellations (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>