force-app/main/default/objects/Cancellation_Refund__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>