force-app/main/default/objects/Cancellation_Refund__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Refund Required</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Refund Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>